Nouvelle information sur les éléments : date de création

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,6 +14,7 @@
   "cancel": "Cancel",
   "info": "Information",
   "dateEdit":"Last modification",
+  "dateAdd": "Created",
   "name": "Name",
   "content": "Text"
 }
