--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -14,6 +14,7 @@
   "cancel": "Annuler",
   "info": "Informations",
   "dateEdit":"Dernière modification",
+  "dateAdd": "Création",
   "name": "Nom",
   "content": "Texte"
 }
