Correction des dernières problèmes (résolutions des warning navigateur) Ajout des textes alternatifs sur les images. Correction d'id multiples. Correction des formulaires.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,6 +4,13 @@
   "footer_description": "WebSite developped with Angular JS as part of a study project.",
   "footer_credit": "Project carried out by LAN Alicia and MUSOLES Hugo",
   "img_lang":"https://cdn.pixabay.com/photo/2012/04/23/16/15/flags-38754_1280.png",
+  "altLogo": "EasDir icon",
+  "altDir": "Directory icon",
+  "altFile": "Text file icon",
+  "altPicture": "Picture icon",
+  "altDark": "Dark mode icon",
+  "altLight": "Ligth mode icon",
+  "altLang": "Language icon",
   "add": "Add",
   "addDir": "Add a directory",
   "addFile": "Add a text file",
