--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -4,6 +4,13 @@
   "footer_description": "Site Web développé en Angular JS dans le cadre d'un projet d'étude.",
   "footer_credit": "Projet réalisé par LAN Alicia et MUSOLES Hugo",
   "img_lang":"https://cdn.pixabay.com/photo/2012/04/11/15/19/france-28463_1280.png",
+  "altLogo": "Logo EasDir",
+  "altDir": "Logo d'un dossier",
+  "altFile": "Logo d'un fichier texte",
+  "altPicture": "Logo d'une image",
+  "altDark": "Logo du mode sombre",
+  "altLight": "Logo du mode clair",
+  "altLang": "Logo de langue",
   "add": "Ajouter",
   "addDir": "Ajouter un dossier",
   "addFile": "Ajouter un fichier texte",
